<resources>
    <string name="app_name">ComFlu2018</string>
    <string name="a">A</string>
    <string name="card_title">Card Title</string>
    <string name="textview">TextView</string>
    <string name="this_is_a_very_long_text_and_we_need_to_show_3_dots">This is a very long text and we need to show 3...(dots)</string>
    <string name="time">Time</string>
    <string name="keynote">Keynote</string>
</resources>
