<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="87dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lecture_details">
        <TextView
            android:id="@+id/lecture_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="53sp"
            android:text="@string/card_title"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold"/>

    <TextView
        android:id="@+id/professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lecture_topic"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7sp"
        android:text="@string/textview"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvIcon"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:gravity="center"
        android:layout_below="@id/professor"
        android:layout_marginStart="57dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_drawable" />

    <TextView
        android:id="@+id/lecture_abstract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/professor"
       android:layout_toEndOf="@id/tvIcon"
        android:paddingLeft="11sp   "
        android:layout_marginTop="1dp"
        android:layout_marginBottom="7sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/keynote" />


    <TextView
        android:id="@+id/lecture_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/lecture_topic"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="3sp"
        android:text="@string/time"/>

        <ImageView
            android:id="@+id/marked_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/lecture_time"
            android:padding="5dp"
            android:src="@drawable/ic_star_black_24dp"/>





</RelativeLayout>