<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">

<TextView
    android:id="@+id/lecture_topic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_margin="17dp"
    android:ems="12"
    android:text="@string/card_title"
    android:textSize="27sp"
    android:textStyle="bold"
    />

    <ImageView
        android:id="@+id/marked_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:padding="5dp"
        android:src="@drawable/ic_star_black_24dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line"
        android:layout_below="@id/lecture_topic"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#D3D3D3"/>

    <TextView
        android:id="@+id/tvIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/line"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_drawable"
        android:gravity="center"
        android:text="@string/a"
        android:textColor="@android:color/white"
        android:textSize="27sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/professor"
        android:layout_alignTop="@+id/tvIcon"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tvIcon"
        android:layout_toRightOf="@+id/tvIcon"
        android:text="@string/textview"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lecture_time"
        android:layout_alignLeft="@id/professor"
        android:layout_alignStart="@id/professor"
        android:layout_below="@id/professor"
        android:text="@string/textview"/>
    <TextView
        android:id="@+id/lecture_abstract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvIcon"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="TextView"/>

</RelativeLayout>